added home page
-basic html home page

--- a/mov_rec/app/views/layouts/application.html.erb
+++ b/mov_rec/app/views/layouts/application.html.erb
@@ -8,7 +8,14 @@
 </head>
 <body>
 
-<%= yield %>
+	<div class="header">Movie Rec</div>
+	<div class="nav">
+	    <a href="/home">HOME</a>
+	</div>
+
+	<div class="content">
+		<%= yield %>
+	</div>
 
 </body>
 </html>
