--- a/mov_rec/app/views/actors/_form.html.erb
+++ b/mov_rec/app/views/actors/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :date_of_birth %><br>
-    <%= f.date_select :date_of_birth %>
+    <%= f.date_select :date_of_birth, :start_year=>1800, :end_year=> Time.now.year %>
   </div>
   <div class="field">
     <%= f.label :place_of_birth %><br>
