--- a/mov_rec/app/views/layouts/application.html.erb
+++ b/mov_rec/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
 	<div class="header">Movie Rec</div>
 	<div class="nav">
 	    <a href="/home">HOME</a>
+	    <a href="/users">USERS</a>
+	    <a href="/movies">MOVIES</a>
+	    <a href="/actors">ACTORS</a>
+	    <a href="/directors">DIRECTORS</a>
+	    <a href="/topics">TOPICS/GENRES</a>
+	    <a href="/studios">STUDIOS</a>
 	</div>
 
 	<div class="content">
