--- a/mov_rec/app/views/profiles/_form.html.erb
+++ b/mov_rec/app/views/profiles/_form.html.erb
@@ -10,7 +10,14 @@
       </ul>
     </div>
   <% end %>
-
+  <div class="field">
+    <%= f.label :first_name %><br>
+    <%= f.text_field :first_name %>
+  </div>
+  <div class="field">
+    <%= f.label :last_name %><br>
+    <%= f.text_field :last_name %>
+  </div>
   <div class="field">
     <%= f.label :age_range %><br>
     <%= f.number_field :age_range %>
@@ -20,12 +27,24 @@
     <%= f.text_field :gender %>
   </div>
   <div class="field">
+    <%= f.label :city %><br>
+    <%= f.text_field :city %>
+  </div>
+  <div class="field">
+    <%= f.label :province %><br>
+    <%= f.text_field :province %>
+  </div>
+  <div class="field">
+    <%= f.label :country %><br>
+    <%= f.text_field :country %>
+  </div>
+  <div class="field">
     <%= f.label :occupation %><br>
     <%= f.text_field :occupation %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
+   <div class="field">
+    <%= f.label :picture %><br>
+    <%= f.text_field :picture %>
   </div>
   <div class="actions">
     <%= f.submit %>
