--- a/mov_rec/app/views/users/_form.html.erb
+++ b/mov_rec/app/views/users/_form.html.erb
@@ -11,6 +11,21 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.label :email %><br>
+    <%= f.text_field :email %>
+  </div>
+
+  <div class="field">
+    <%= f.label :password %><br>
+    <%= f.text_field :password %>
+  </div>
+
+  <div class="field">
+    <%= f.label :date_of_birth %><br>
+    <%= f.date_select :date_of_birth, :start_year=>1900, :end_year=> Time.now.year %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
