--- a/mov_rec/app/views/users/_form.html.erb
+++ b/mov_rec/app/views/users/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :user_type_id %><br>
+    <%= f.text_field :user_type_id %>
+  </div>
+
+  <div class="field">
     <%= f.label :date_of_birth %><br>
     <%= f.date_select :date_of_birth, :start_year=>1900, :end_year=> Time.now.year %>
   </div>
