--- a/mov_rec/app/views/users/show.html.erb
+++ b/mov_rec/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h2>Profile</h2>
-
 <% @profile = Profile.find_by user_id: @user.id %>
+
+<h2>Profile</h2>
 
 <p>
   <strong>Email:</strong>
@@ -14,50 +14,95 @@
   <%= @user.date_of_birth %>
 </p>
 
-<p>
-  <strong>First Name:</strong>
-  <%= @profile.first_name %>
-</p>
+<% if @profile != nil %>
 
-<p>
-  <strong>Last Name:</strong>
-  <%= @profile.last_name %>
-</p>
+  <p>
+    <strong>First Name:</strong>
+    <%= @profile.first_name %>
+  </p>
 
-<p>
-  <strong>Age range:</strong>
-  <%= @profile.age_range %>
-</p>
+  <p>
+    <strong>Last Name:</strong>
+    <%= @profile.last_name %>
+  </p>
 
-<p>
-  <strong>Gender:</strong>
-  <%= @profile.gender %>
-</p>
+  <p>
+    <strong>Age range:</strong>
+    <%= @profile.age_range %>
+  </p>
 
-<p>
-  <strong>City:</strong>
-  <%= @profile.city %>
-</p>
+  <p>
+    <strong>Gender:</strong>
+    <%= @profile.gender %>
+  </p>
 
-<p>
-  <strong>Province:</strong>
-  <%= @profile.province %>
-</p>
+  <p>
+    <strong>City:</strong>
+    <%= @profile.city %>
+  </p>
 
-<p>
-  <strong>Country:</strong>
-  <%= @profile.country %>
-</p>
+  <p>
+    <strong>Province:</strong>
+    <%= @profile.province %>
+  </p>
 
-<p>
-  <strong>Occupation:</strong>
-  <%= @profile.occupation %>
-</p>
+  <p>
+    <strong>Country:</strong>
+    <%= @profile.country %>
+  </p>
 
-<p>
-  <strong>Picture:</strong>
-  <%= @profile.picture %>
-</p>
+  <p>
+    <strong>Occupation:</strong>
+    <%= @profile.occupation %>
+  </p>
+
+  <p>
+    <strong>Picture:</strong>
+    <%= @profile.picture %>
+  </p>
+
+<% end %>
+
+<% @watched = MovieRating.where user_id: @user.id %>
+
+<br>
+<br>
+
+
+<h2>Movies Watched</h2>
+
+<table>
+  
+  <col width="130">
+  <col width="130">
+  <col width="130">  
+  <col width="200">
+
+  <thead>
+    <tr>
+      <th>Movie</th>
+      <th>Rating</th>
+      <th>Review</th>
+      <th>Date</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody style="border: 1px solid black">
+    <% @watched.each do |watch| %>
+      <% @movie = Movie.find_by id: watch.movie_id %>
+      <tr>
+        <td style="text-align: center"><%= @movie.name %></td>
+        <td style="text-align: center"><%= watch.user_rating %></td>
+        <td style="text-align: center"><%= watch.review %></td>
+        <td style="text-align: center"><%= watch.created_at %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+<br>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
