updated profiles views

--- a/mov_rec/app/views/profiles/show.html.erb
+++ b/mov_rec/app/views/profiles/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Age range:</strong>
-  <%= @profile.age_range %>
+  <strong>Date of Birth:</strong>
+  <%= @profile.date_of_birth %>
 </p>
 
 <p>
