--- a/mov_rec/app/views/profiles/_form.html.erb
+++ b/mov_rec/app/views/profiles/_form.html.erb
@@ -19,8 +19,8 @@
     <%= f.text_field :last_name %>
   </div>
   <div class="field">
-    <%= f.label :age_range %><br>
-    <%= f.number_field :age_range %>
+    <%= f.label :date_of_birth %><br>
+    <%= f.date_select :date_of_birth, :start_year=>1900, :end_year=> Time.now.year %>
   </div>
   <div class="field">
     <%= f.radio_button :gender, 'F' %>
