--- a/mov_rec/app/views/profiles/index.html.erb
+++ b/mov_rec/app/views/profiles/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>First Name</th>
       <th>Last Name</th>
-      <th>Age range</th>
+      <th>Date of Birth</th>
       <th>Gender</th>
       <th>City</th>
       <th>Province</th>
@@ -24,7 +24,7 @@
       <tr>
         <td><%= profile.first_name %></td>
         <td><%= profile.last_name %></td>
-        <td><%= profile.age_range %></td>
+        <td><%= profile.date_of_birth %></td>
         <td><%= profile.gender %></td>
         <td><%= profile.city %></td>
         <td><%= profile.province %></td>
