--- a/mov_rec/app/views/users/_form.html.erb
+++ b/mov_rec/app/views/users/_form.html.erb
@@ -21,12 +21,8 @@
     <%= f.text_field :password %>
   </div>
 
-  <div class="field">
-    <%= f.label :user_type_id %><br>
-    <%= f.text_field :user_type_id %>
-  </div>
-
   <div class="actions">
+    <%= f.hidden_field :user_type_id, value: 2 %>
     <%= f.submit %>
   </div>
 <% end %>
