--- a/mov_rec/app/views/users/_form.html.erb
+++ b/mov_rec/app/views/users/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.text_field :password %>
   </div>
 
+  <div class="field">
+    <%= f.label :password %><br>
+    <%= f.text_field :password_confirmation %>
+  </div>
+
   <div class="actions">
     <%= f.hidden_field :user_type_id, value: 2 %>
     <%= f.submit %>
