More clicky links in nav, but will delete later!

--- a/mov_rec/app/views/layouts/application.html.erb
+++ b/mov_rec/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
 	    <a href="/directors">DIRECTORS</a>
 	    <a href="/topics">TOPICS/GENRES</a>
 	    <a href="/studios">STUDIOS</a>
+	    For testing:
+	    <a href="/profiles">PROFILES</a>
+	    <a href="/movie_ratings">WATCHED</a>
 	</div>
 
 	<div class="content">
