user_type_id to get id of type_name 'user' instead of 2!

--- a/mov_rec/app/views/users/_form.html.erb
+++ b/mov_rec/app/views/users/_form.html.erb
@@ -27,7 +27,8 @@
   </div>
 
   <div class="actions">
-    <%= f.hidden_field :user_type_id, value: 2 %>
+    <% @user_type = UserType.find_by type_name: 'user' %>
+    <%= f.hidden_field :user_type_id, value: @user_type.id %>
     <%= f.submit %>
   </div>
 <% end %>
