Fixed up forms (blank option for dob!) & displays

--- a/mov_rec/app/views/users/show.html.erb
+++ b/mov_rec/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
   </p>
 
   <p>
-    <strong>Age range:</strong>
+    <strong>Date of Birth:</strong>
     <%= @profile.date_of_birth %>
   </p>
 
