--- a/mov_rec/app/views/profiles/_form.html.erb
+++ b/mov_rec/app/views/profiles/_form.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="field">
     <%= f.label :date_of_birth %><br>
-    <%= f.date_select :date_of_birth, :start_year=>1900, :end_year=> Time.now.year %>
+    <%= f.date_select :date_of_birth, :start_year=>1900, :end_year=> Time.now.year, include_blank: true %>
   </div>
   <div class="field">
     <%= f.radio_button :gender, 'F' %>
