--- a/mov_rec/app/views/users/show.html.erb
+++ b/mov_rec/app/views/users/show.html.erb
@@ -64,6 +64,8 @@
 
 <% @watched = MovieRating.where user_id: @user.id %>
 
+<% @avgrating =  MovieRating.select("avg(user_rating) as avg, count(user_rating) as count, movie_id").group("movie_id") %>
+
 <br>
 <br>
 
@@ -71,30 +73,22 @@
 <h2>Watched</h2>
 
 <table>
-  
-  <col width="130">
-  <col width="130">
-  <col width="130">  
-  <col width="200">
-
   <thead>
     <tr>
       <th>Movie</th>
-      <th>Rating</th>
-      <th>Review</th>
-      <th>Date</th>
+      <th>Average<br>Rating</th>
+      <th>Times Seen</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody style="border: 1px solid black">
-    <% @watched.each do |watch| %>
+    <% @avgrating.each do |watch| %>
       <% @movie = Movie.find_by id: watch.movie_id %>
       <tr>
         <td style="text-align: center"><%= @movie.name %></td>
-        <td style="text-align: center"><%= watch.user_rating %></td>
-        <td style="text-align: center"><%= watch.review %></td>
-        <td style="text-align: center"><%= watch.created_at %></td>
+        <td style="text-align: center"><%= watch.avg %></td>
+        <td style="text-align: center"><%= watch.count %></td>
       </tr>
     <% end %>
   </tbody>
