--- a/mov_rec/app/views/movie_ratings/edit.html.erb
+++ b/mov_rec/app/views/movie_ratings/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @movie_rating %> |
-<%= link_to 'Back', movie_ratings_path %>
+<%= link_to 'Back', '/users/' %>
