--- a/mov_rec/app/views/profiles/edit.html.erb
+++ b/mov_rec/app/views/profiles/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'formedit' %>
 
-<%= link_to 'Show', @profile %> |
-<%= link_to 'Back', profiles_path %>
+<%= link_to 'Back', '/users/' %>
