--- a/mov_rec/app/views/users/show.html.erb
+++ b/mov_rec/app/views/users/show.html.erb
@@ -4,6 +4,12 @@
 
 <h2>Profile</h2>
 
+<%= link_to 'Edit Login', edit_user_path(@user) %> |
+<%= link_to 'Edit Profile', edit_profile_path(@profile) %>
+
+<br>
+<br>
+
 <p>
   <strong>Email:</strong>
   <%= @user.email %>
@@ -70,19 +76,17 @@
 
 <h2>Watched</h2>
 
-<table>
-  
-  <col width="130">
-  <col width="130">
-  <col width="130">  
-  <col width="200">
+<br>
+<br>
 
+<table>
   <thead>
     <tr>
       <th>Movie</th>
+      <th>Date Watched</th>
       <th>Rating</th>
       <th>Review</th>
-      <th>Date</th>
+      <th>Rating Created</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -92,17 +96,18 @@
       <% @movie = Movie.find_by id: watch.movie_id %>
       <tr>
         <td style="text-align: center"><%= @movie.name %></td>
+        <td style="text-align: center"><%= watch.date_watched %></td>
         <td style="text-align: center"><%= watch.user_rating %></td>
         <td style="text-align: center"><%= watch.review %></td>
-        <td style="text-align: center"><%= watch.created_at %></td>
+        <td style="text-align: center">
+          <% if watch.user_rating != nil %>
+            <%= watch.updated_at %>
+          <% end %>
+        </td>
+        <td><%= link_to 'Edit', edit_movie_rating_path(watch) %></td>
+        <td><%= link_to 'Destroy', watch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-<br>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
 
