--- a/mov_rec/app/views/movies/index.html.erb
+++ b/mov_rec/app/views/movies/index.html.erb
@@ -24,7 +24,12 @@
         <td><%= movie.name %></td>
         <td><%= movie.description %></td>
         <td><%= movie.date_released %></td>
-        <td><%= movie.duration %></td>
+        <td>
+          <% if movie.duration.hour == 0 %><%= movie.duration.strftime('%Mm') %>
+          <% else %>
+            <%= movie.duration.strftime('%kh %Mm') %>
+          <% end %>
+        </td>
         <td><%= movie.language %></td>
         <td><%= movie.subtitles %></td>
         <td><%= movie.dubbed %></td>
