--- a/mov_rec/app/views/directors/_form.html.erb
+++ b/mov_rec/app/views/directors/_form.html.erb
@@ -23,6 +23,16 @@
     <%= f.label :place_of_birth %><br>
     <%= f.text_field :place_of_birth %>
   </div>
+   <div class="field">
+    <%= f.label :date_of_birth %><br>
+    <%= f.date_select :date_of_birth, :start_year=>1900, :end_year=> Time.now.year, include_blank: true %>
+  </div>
+  <div class="field">
+    <%= f.radio_button :gender, 'F' %>
+    <%= label :gender_F, "Female" %>
+    <%= f.radio_button :gender, 'M' %>
+    <%= label :gender_M, "Male" %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
