--- a/mov_rec/app/views/directors/index.html.erb
+++ b/mov_rec/app/views/directors/index.html.erb
@@ -18,6 +18,8 @@
         <td><%= director.first_name %></td>
         <td><%= director.last_name %></td>
         <td><%= director.place_of_birth %></td>
+        <td><%= director.date_of_birth %></td>
+        <td><%= director.gender %></td>
         <td><%= link_to 'Show', director %></td>
         <td><%= link_to 'Edit', edit_director_path(director) %></td>
         <td><%= link_to 'Destroy', director, method: :delete, data: { confirm: 'Are you sure?' } %></td>
