--- a/mov_rec/app/views/movies/_form.html.erb
+++ b/mov_rec/app/views/movies/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.label :movie_name %><br>
+    <%= f.text_field :movie_name %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
