--- a/mov_rec/app/views/movies/index.html.erb
+++ b/mov_rec/app/views/movies/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Movie Name</th>
       <th>Description</th>
       <th>Date released</th>
       <th>Duration</th>
@@ -21,7 +21,7 @@
   <tbody>
     <% @movies.each do |movie| %>
       <tr>
-        <td><%= movie.name %></td>
+        <td><%= movie.movie_name %></td>
         <td><%= movie.description %></td>
         <td><%= movie.date_released %></td>
         <td>
