--- a/mov_rec/app/views/topics/_form.html.erb
+++ b/mov_rec/app/views/topics/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :genre %><br>
-    <%= f.text_field :genre %>
+    <%= f.label :genre_name %><br>
+    <%= f.text_field :genre_name %>
   </div>
   <div class="actions">
     <%= f.submit %>
