--- a/mov_rec/app/views/topics/index.html.erb
+++ b/mov_rec/app/views/topics/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @topics.each do |topic| %>
       <tr>
-        <td><%= topic.genre %></td>
+        <td><%= topic.genre_name %></td>
         <td><%= link_to 'Show', topic %></td>
         <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
         <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
