--- a/mov_rec/app/views/topics/show.html.erb
+++ b/mov_rec/app/views/topics/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Genre:</strong>
-  <%= @topic.genre %>
+  <%= @topic.genre_name %>
 </p>
 
 <%= link_to 'Edit', edit_topic_path(@topic) %> |
