--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -1,9 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @movie.movie_name %>
-</p>
+<h2><%= @movie.movie_name %></h2>
 
 <p>
   <strong>Description:</strong>
@@ -44,6 +41,36 @@
   <strong>Age rating:</strong>
   <%= @movie.age_rating %>
 </p>
+
+<% @avgrating =  MovieRating.select("avg(user_rating) as avg, count(id) as count, user_id").group("user_id").order(count: :desc).where movie_id: @movie.id %>
+
+<br>
+<br>
+
+
+<h2>Watched By</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>Movie</th>
+      <th>Average<br>Rating</th>
+      <th>Times Seen</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody style="border: 1px solid black">
+    <% @avgrating.each do |watch| %>
+      <% @user = User.find_by id: watch.user_id %>
+      <tr>
+        <td style="text-align: center"><%= @user.email %></td>
+        <td style="text-align: center"><%= watch.avg %></td>
+        <td style="text-align: center"><%= watch.count %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', movies_path %>
