--- a/mov_rec/app/views/users/show.html.erb
+++ b/mov_rec/app/views/users/show.html.erb
@@ -95,7 +95,7 @@
     <% @watched.each do |watch| %>
       <% @movie = Movie.find_by id: watch.movie_id %>
       <tr>
-        <td style="text-align: center"><%= @movie.name %></td>
+        <td style="text-align: center"><%= @movie.movie_name %></td>
         <td style="text-align: center"><%= watch.date_watched %></td>
         <td style="text-align: center"><%= watch.user_rating %></td>
         <td style="text-align: center"><%= watch.review %></td>
