--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -64,7 +64,7 @@
     <% @avgrating.each do |watch| %>
       <% @user = User.find_by id: watch.user_id %>
       <tr>
-        <td style="text-align: center"><%= @user.email %></td>
+        <td style="text-align: center"><a href="/users/<%= @user.id %>"><%= @user.email %></a></td>
         <td style="text-align: center"><%= watch.avg %></td>
         <td style="text-align: center"><%= watch.count %></td>
       </tr>
