--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -53,7 +53,7 @@
 <table>
   <thead>
     <tr>
-      <th>Movie</th>
+      <th>User</th>
       <th>Average<br>Rating</th>
       <th>Times Seen</th>
       <th colspan="3"></th>
