--- a/mov_rec/app/views/users/edit.html.erb
+++ b/mov_rec/app/views/users/edit.html.erb
@@ -1,5 +1,39 @@
 <h1>Editing User</h1>
 
-<%= render 'form' %>
+<%= form_for(@user) do |f| %>
+  <% if @user.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+      <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :email %><br>
+    <%= f.email_field :email %>
+  </div>
+
+  <div class="field">
+    <%= f.label :new_password %><br>
+    <%= f.password_field :password %>
+  </div>
+
+  <div class="field">
+    <%= f.label :new_password %><br>
+    <%= f.password_field :password_confirmation %>
+  </div>
+
+  <div class="actions">
+    <% @user_type = UserType.find_by type_name: 'user' %>
+    <%= f.hidden_field :user_type_id, value: @user_type.id %>
+    <%= f.submit %>
+  </div>
+<% end %>
+
 
 <%= link_to 'Back', @user %>
