--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<img src="<%= @movie.poster %>" style="width: 350px; float: right">
+
 <h2><%= @movie.movie_name %></h2>
 
 <p>
