--- a/mov_rec/app/assets/stylesheets/scaffolds.scss
+++ b/mov_rec/app/assets/stylesheets/scaffolds.scss
@@ -1,3 +1,6 @@
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
 body {
   background-color: #fff;
   color: #333;
@@ -11,6 +14,10 @@ p, ol, ul, td {
   font-size: 13px;
   line-height: 18px;
 }
+
+ h1 {
+    text-align: center;
+  }
 
 pre {
   background-color: #eee;
