--- a/mov_rec/app/views/movie_ratings/index.html.erb
+++ b/mov_rec/app/views/movie_ratings/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= movie_rating.date_watched %></td>
         <td><%= movie_rating.user_rating %></td>
-        <td><%= movie_rating.review %></td>
+        <td id="td1"><%= movie_rating.review %></td>
         <td><%= movie_rating.user %></td>
         <td><%= movie_rating.movie %></td>
         <td><%= link_to 'Show', movie_rating %></td>
