--- a/mov_rec/app/assets/stylesheets/scaffolds.scss
+++ b/mov_rec/app/assets/stylesheets/scaffolds.scss
@@ -7,12 +7,23 @@ body {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  padding: 10px;
 }
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  padding: 5px;
+}
+
+th {
+  padding: 5px;
+  text-align: center;
+}
+
+#td1 {
+  text-align: justify;
 }
 
  h1 {
