--- a/mov_rec/app/views/users/show.html.erb
+++ b/mov_rec/app/views/users/show.html.erb
@@ -95,11 +95,11 @@
     <% @watched.each do |watch| %>
       <% @movie = Movie.find_by id: watch.movie_id %>
       <tr>
-        <td style="text-align: center"><a href="/movies/<%= @movie.id %>"><%= @movie.movie_name %></a></td>
-        <td style="text-align: center"><%= watch.date_watched %></td>
+        <td><a href="/movies/<%= @movie.id %>"><%= @movie.movie_name %></a></td>
+        <td><%= watch.date_watched %></td>
         <td style="text-align: center"><%= watch.user_rating %></td>
-        <td style="text-align: center"><%= watch.review %></td>
-        <td style="text-align: center">
+        <td id="td1"><%= watch.review %></td>
+        <td>
           <% if watch.user_rating != nil %>
             <%= watch.updated_at %>
           <% end %>
