Modified admin/member privileges
only admins have access to new/edit/delete methods on users, movies,
directors, topics, and studios.

--- a/mov_rec/app/views/topics/show.html.erb
+++ b/mov_rec/app/views/topics/show.html.erb
@@ -5,5 +5,9 @@
   <%= @topic.genre_name %>
 </p>
 
-<%= link_to 'Edit', edit_topic_path(@topic) %> |
+<% @user_type = UserType.find_by type_name: 'Admin' %>
+<% if current_user.user_type_id == @user_type.id  %>
+	<%= link_to 'Edit', edit_topic_path(@topic) %> |
+<% end %>
+
 <%= link_to 'Back', topics_path %>
