--- a/mov_rec/app/views/directors/index.html.erb
+++ b/mov_rec/app/views/directors/index.html.erb
@@ -21,13 +21,18 @@
         <td><%= director.date_of_birth %></td>
         <td><%= director.gender %></td>
         <td><%= link_to 'Show', director %></td>
-        <td><%= link_to 'Edit', edit_director_path(director) %></td>
-        <td><%= link_to 'Destroy', director, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <% @user_type = UserType.find_by type_name: 'Admin' %>
+        <% if current_user.user_type_id == @user_type.id  %>
+          <td><%= link_to 'Edit', edit_director_path(director) %></td>
+          <td><%= link_to 'Destroy', director, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Director', new_director_path %>
+<% if current_user.user_type_id == @user_type.id  %>
+  <%= link_to 'New Director', new_director_path %>
+<% end %>
