--- a/mov_rec/app/views/directors/show.html.erb
+++ b/mov_rec/app/views/directors/show.html.erb
@@ -25,5 +25,9 @@
   <%= @director.gender %>
 </p>
 
-<%= link_to 'Edit', edit_director_path(@director) %> |
+<% @user_type = UserType.find_by type_name: 'Admin' %>
+<% if current_user.user_type_id == @user_type.id  %>
+  <%= link_to 'Edit', edit_director_path(@director) %> |
+<% end %>
+
 <%= link_to 'Back', directors_path %>
