--- a/mov_rec/app/views/layouts/application.html.erb
+++ b/mov_rec/app/views/layouts/application.html.erb
@@ -18,7 +18,6 @@
 
 	    <% if logged_in? %>
 	      	<li><a href="/users/<%= current_user.id %>">MY PROFILE</a></li>
-	      	
 	      	<li><a href="/movies">MOVIES</a></li>
 	      	<li><a href="/directors">DIRECTORS</a></li>
 	      	<li><a href="/topics">TOPICS/GENRES</a></li>
@@ -49,7 +48,7 @@
 					<li class="divider"></li>
 				</ul>
 			<% else %>
-				<li><a href="logout">NOT ADMIN</a></li>
+				<li><a href="logout">LOGOUT</a></li>
 			<% end %>
 
 		<% else %>
