--- a/mov_rec/app/views/movies/index.html.erb
+++ b/mov_rec/app/views/movies/index.html.erb
@@ -37,14 +37,22 @@
         <td><%= movie.dubbed %></td>
         <td><%= movie.country %></td>
         <td><%= movie.age_rating %></td>
+
         <td><%= link_to 'Show', movie %></td>
-        <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
-        <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <% @user_type = UserType.find_by type_name: 'Admin' %>
+        <% if current_user.user_type_id == @user_type.id  %>
+          <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
+          <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
+
     <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Movie', new_movie_path %>
+<% if current_user.user_type_id == @user_type.id  %>
+  <%= link_to 'New Movie', new_movie_path %>
+<% end %>
