--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -74,5 +74,9 @@
   </tbody>
 </table>
 
-<%= link_to 'Edit', edit_movie_path(@movie) %> |
+<% @user_type = UserType.find_by type_name: 'Admin' %>
+<% if current_user.user_type_id == @user_type.id  %>
+  <%= link_to 'Edit', edit_movie_path(@movie) %> | 
+<% end %>
+
 <%= link_to 'Back', movies_path %>
