--- a/mov_rec/app/views/studios/index.html.erb
+++ b/mov_rec/app/views/studios/index.html.erb
@@ -17,13 +17,18 @@
         <td><%= studio.studio_name %></td>
         <td><%= studio.country %></td>
         <td><%= link_to 'Show', studio %></td>
-        <td><%= link_to 'Edit', edit_studio_path(studio) %></td>
-        <td><%= link_to 'Destroy', studio, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <% @user_type = UserType.find_by type_name: 'Admin' %>
+        <% if current_user.user_type_id == @user_type.id  %>
+          <td><%= link_to 'Edit', edit_studio_path(studio) %></td>
+          td><%= link_to 'Destroy', studio, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Studio', new_studio_path %>
+<% if current_user.user_type_id == @user_type.id  %>
+  <%= link_to 'New Studio', new_studio_path %>
+<% end %>
