--- a/mov_rec/app/views/studios/show.html.erb
+++ b/mov_rec/app/views/studios/show.html.erb
@@ -10,5 +10,9 @@
   <%= @studio.country %>
 </p>
 
-<%= link_to 'Edit', edit_studio_path(@studio) %> |
+<% @user_type = UserType.find_by type_name: 'Admin' %>
+<% if current_user.user_type_id == @user_type.id  %>
+	<%= link_to 'Edit', edit_studio_path(@studio) %> |
+<% end %>
+
 <%= link_to 'Back', studios_path %>
