--- a/mov_rec/app/views/topics/index.html.erb
+++ b/mov_rec/app/views/topics/index.html.erb
@@ -15,13 +15,18 @@
       <tr>
         <td><%= topic.genre_name %></td>
         <td><%= link_to 'Show', topic %></td>
-        <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
-        <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <% @user_type = UserType.find_by type_name: 'Admin' %>
+        <% if current_user.user_type_id == @user_type.id  %>
+          <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
+          <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Topic', new_topic_path %>
+<% if current_user.user_type_id == @user_type.id  %>
+  <%= link_to 'New Topic', new_topic_path %>
+<% end %>
