--- a/mov_rec/app/views/users/new.html.erb
+++ b/mov_rec/app/views/users/new.html.erb
@@ -2,4 +2,8 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', users_path %>
+<% if current_user %>
+	<%= link_to 'Back', users_path %>
+<% else %>
+	<%= link_to 'Back', root_path %>
+<% end %>
