Displaying topics/genres in movie and profile!

--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -44,6 +44,12 @@
   <%= @movie.age_rating %>
 </p>
 
+<% @genres = Topic.joins(:movie_topics).where(movie_topics: { movie_id: @movie.id }) %>
+
+  <% @genres.each do |genre| %>
+    <%= genre.genre_name %>
+  <% end %>
+
 <% @avgrating =  MovieRating.select("avg(user_rating) as avg, count(id) as count, user_id").group("user_id").order(count: :desc).where movie_id: @movie.id %>
 
 <br>
