--- a/mov_rec/app/views/studios/index.html.erb
+++ b/mov_rec/app/views/studios/index.html.erb
@@ -29,6 +29,7 @@
 </table>
 
 <br>
+<% @user_type = UserType.find_by type_name: 'Admin' %>
 <% if current_user.user_type_id == @user_type.id  %>
   <%= link_to 'New Studio', new_studio_path %>
 <% end %>
