--- a/mov_rec/app/views/users/_form.html.erb
+++ b/mov_rec/app/views/users/_form.html.erb
@@ -11,24 +11,21 @@
     </div>
   <% end %>
 
-  <div class="field">
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
     <%= f.label :email %><br>
-    <%= f.email_field :email %>
-  </div>
+    <%= f.email_field :email, class: 'form-control' %>
 
-  <div class="field">
     <%= f.label :password %><br>
-    <%= f.password_field :password %>
-  </div>
+    <%= f.password_field :password, class: 'form-control' %>
 
-  <div class="field">
     <%= f.label :password %><br>
-    <%= f.password_field :password_confirmation %>
-  </div>
+    <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-  <div class="actions">
     <% @user_type = UserType.find_by type_name: 'Member' %>
     <%= f.hidden_field :user_type_id, value: @user_type.id %>
-    <%= f.submit %>
-  </div>
+    <%= f.submit "Log in", class: "btn btn-primary" %>
+    </div>
+</div>
 <% end %>
+
