--- a/mov_rec/app/views/topics/show.html.erb
+++ b/mov_rec/app/views/topics/show.html.erb
@@ -11,3 +11,47 @@
 <% end %>
 
 <%= link_to 'Back', topics_path %>
+
+<table>
+  <thead>
+	<tr>
+	  <th></th>
+	  <th>Movie Name</th>
+	  <th>Description</th>
+	  <th>Date released</th>
+	  <th>Duration</th>
+	  <th>Language</th>
+	  <th>Subtitles</th>
+	  <th>Dubbed</th>
+	  <th>Country</th>
+	  <th>Age rating</th>
+	  <th colspan="3"></th>
+	</tr>
+  </thead>
+
+  <% @movies = Movie.joins(:movie_topics).where(movie_topics: { topic_id: @topic.id }) %>
+
+  <tbody>
+	<% @movies.each do |movie| %>
+	  <tr>
+		<td><img src="<%= movie.poster %>" style="width: 75px"></td>
+		<td><%= movie.movie_name %></td>
+		<td id="td1"><%= movie.description %></td>
+		<td><%= movie.date_released %></td>
+		<td>
+		  <% if movie.duration.hour == 0 %><%= movie.duration.strftime('%Mm') %>
+		  <% else %>
+			<%= movie.duration.strftime('%kh %Mm') %>
+		  <% end %>
+		</td>
+		<td><%= movie.language %></td>
+		<td><%= movie.subtitles %></td>
+		<td><%= movie.dubbed %></td>
+		<td><%= movie.country %></td>
+		<td><%= movie.age_rating %></td>
+
+		<td><%= link_to 'Show', movie %></td>
+	  </tr>
+	<% end %>
+  </tbody>
+</table>
