--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -56,7 +56,7 @@
 
 <h2>Watched By</h2>
 
-<% @avgrating =  MovieRating.select("avg(user_rating) as avg, count(id) as count, user_id").group("user_id").order(count: :desc).where movie_id: @movie.id %>
+<% @userwatched =  MovieRating.select("avg(user_rating) as avg, count(id) as count, user_id").group("user_id").order(count: :desc).where movie_id: @movie.id %>
 
 <table>
   <thead>
@@ -64,17 +64,26 @@
       <th>User</th>
       <th>Average<br>Rating</th>
       <th>Times Seen</th>
+      <th>Reviews</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody style="border: 1px solid black">
-    <% @avgrating.each do |watch| %>
+    <% @userwatched.each do |watch| %>
       <% @user = User.find_by id: watch.user_id %>
+      <% @userreviews = MovieRating.where(movie_id: @movie.id, user_id: @user.id) %>
       <tr>
         <td style="text-align: center"><a href="/users/<%= @user.id %>"><%= @user.email %></a></td>
         <td style="text-align: center"><%= watch.avg %></td>
         <td style="text-align: center"><%= watch.count %></td>
+        <td>
+          <% @userreviews.each do |userreview| %>
+            <% if userreview.review != '' %>
+              <%= userreview.review %><br>
+            <% end %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
