Fixed date format

--- a/mov_rec/app/views/users/show.html.erb
+++ b/mov_rec/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
 
 <p>
     <strong>Join Date:</strong>
-    <%= @user.created_at %>
+    <%= @user.created_at.strftime("%Y-%m-%d") %>
   </p>
 
   <p>
