--- a/mov_rec/app/views/layouts/application.html.erb
+++ b/mov_rec/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
 
 	      	<li><a href="/users/<%= current_user.id %>">MY PROFILE</a></li>
 	      	<li><a href="/movies">MOVIES</a></li>
+	      	<li><a href="/actors">ACTORS</a></li>
 	      	<li><a href="/directors">DIRECTORS</a></li>
 	      	<li><a href="/topics">TOPICS/GENRES</a></li>
 		  	<li><a href="/studios">STUDIOS</a></li>
