--- a/mov_rec/app/views/directors/index.html.erb
+++ b/mov_rec/app/views/directors/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<% @admin = UserType.find_by type_name: 'Admin' %>
+
 <h1>Listing Directors</h1>
 
 <table>
@@ -22,8 +24,7 @@
         <td><%= director.gender %></td>
         <td><%= link_to 'Show', director %></td>
 
-        <% @user_type = UserType.find_by type_name: 'Admin' %>
-        <% if current_user.user_type_id == @user_type.id  %>
+        <% if current_user.user_type_id == @admin.id %>
           <td><%= link_to 'Edit', edit_director_path(director) %></td>
           <td><%= link_to 'Destroy', director, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
@@ -33,7 +34,7 @@
 </table>
 
 <br>
-<% @user_type = UserType.find_by type_name: 'Admin' %>
-<% if current_user.user_type_id == @user_type.id  %>
+
+<% if current_user.user_type_id == @admin.id  %>
   <%= link_to 'New Director', new_director_path %>
 <% end %>
