--- a/mov_rec/app/views/studios/index.html.erb
+++ b/mov_rec/app/views/studios/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<% @admin = UserType.find_by type_name: 'Admin' %>
+
 <h1>Listing Studios</h1>
 
 <table>
@@ -18,10 +20,9 @@
         <td><%= studio.country %></td>
         <td><%= link_to 'Show', studio %></td>
 
-        <% @user_type = UserType.find_by type_name: 'Admin' %>
-        <% if current_user.user_type_id == @user_type.id  %>
+        <% if current_user.user_type_id == @admin.id  %>
           <td><%= link_to 'Edit', edit_studio_path(studio) %></td>
-          td><%= link_to 'Destroy', studio, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Destroy', studio, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
     <% end %>
@@ -29,7 +30,7 @@
 </table>
 
 <br>
-<% @user_type = UserType.find_by type_name: 'Admin' %>
-<% if current_user.user_type_id == @user_type.id  %>
+
+<% if current_user.user_type_id == @admin.id  %>
   <%= link_to 'New Studio', new_studio_path %>
 <% end %>
