--- a/mov_rec/app/views/topics/index.html.erb
+++ b/mov_rec/app/views/topics/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<% @admin = UserType.find_by type_name: 'Admin' %>
+
 <h1>Listing Topics</h1>
 
 <table>
@@ -16,8 +18,7 @@
         <td><%= topic.genre_name %></td>
         <td><%= link_to 'Show', topic %></td>
 
-        <% @user_type = UserType.find_by type_name: 'Admin' %>
-        <% if current_user.user_type_id == @user_type.id  %>
+        <% if current_user.user_type_id == @admin.id  %>
           <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
           <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
@@ -27,6 +28,7 @@
 </table>
 
 <br>
-<% if current_user.user_type_id == @user_type.id  %>
+
+<% if current_user.user_type_id == @admin.id  %>
   <%= link_to 'New Topic', new_topic_path %>
 <% end %>
