--- a/mov_rec/app/views/users/_form.html.erb
+++ b/mov_rec/app/views/users/_form.html.erb
@@ -22,8 +22,7 @@
     <%= f.label :password %><br>
     <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-    <% @user_type = UserType.find_by type_name: 'Member' %>
-    <%= f.hidden_field :user_type_id, value: @user_type.id %>
+    <%= f.hidden_field :user_type_id, value: UserType.find_by(type_name: 'Member').id %>
     <%= f.submit "Log in", class: "btn btn-primary" %>
     </div>
 </div>
