--- a/mov_rec/app/views/directors/show.html.erb
+++ b/mov_rec/app/views/directors/show.html.erb
@@ -25,6 +25,7 @@
   <%= @director.gender %>
 </p>
 
+<% if current_user.user_type_id == UserType.find_by(type_name: 'Admin').id  %>
   <%= link_to 'Edit', edit_director_path(@director) %> |
 <% end %>
 
