--- a/mov_rec/app/views/users/show.html.erb
+++ b/mov_rec/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
     <%= @user.email %>
   </p>
 
-<p>
+  <p>
     <strong>Join Date:</strong>
     <%= @user.created_at.strftime("%Y-%m-%d") %>
   </p>
@@ -73,11 +73,17 @@
 
 <% end %>
 
+<% @devices = Device.joins(:used_devices).where(used_devices: { profile_id: @profile.id }) %>
+
+<% @devices.each do |device| %>
+  <%= devices.device_name %>
+<% end %>
+
 <% @genres = Topic.joins(:likes_topics).where(likes_topics: { profile_id: @profile.id }) %>
 
-  <% @genres.each do |genre| %>
-    <%= genre.genre_name %>
-  <% end %>
+<% @genres.each do |genre| %>
+  <%= genre.genre_name %>
+<% end %>
 
 <br>
 <br>
