--- a/mov_rec/app/views/users/show.html.erb
+++ b/mov_rec/app/views/users/show.html.erb
@@ -73,12 +73,10 @@
 
 <% end %>
 
-<% if false %>
-  <% @devices = Device.joins(:used_devices).where(used_devices: { profile_id: @profile.id }) %>
+<% @devices = Device.joins(:used_devices).where(used_devices: { profile_id: @profile.id }) %>
 
-  <% @devices.each do |device| %>
-    <%= devices.device_name %>
-  <% end %>
+<% @devices.each do |device| %>
+  <%= devices.device_name %>
 <% end %>
 
 <% @genres = Topic.joins(:likes_topics).where(likes_topics: { profile_id: @profile.id }) %>
@@ -97,7 +95,7 @@
 <br>
 
 
-<% @watched = MovieRating.where user_id: @user.id %>
+<% @watched = MovieRating.where profile_id: @profile.id %>
 
 <table>
   <thead>
