--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -71,9 +71,8 @@
 
   <tbody style="border: 1px solid black">
     <% @watches.each do |watch| %>
-      <% @profile = Profile.find_by id: watch.profile_id %>
-      <% @user = User.find_by id: @profile.user_id %>
-      <% @userreviews = MovieRating.where(movie_id: @movie.id, profile_id: @profile.id) %>
+      <% @user = User.joins(:profile).where(profiles: { id: watch.profile_id }).take %>
+      <% @userreviews = MovieRating.where(movie_id: @movie.id, profile_id: watch.profile_id) %>
       <tr>
         <td style="text-align: center"><a href="/users/<%= @user.id %>"><%= @user.email %></a></td>
         <td style="text-align: center"><%= watch.avg %></td>
