Started formatting the look of website

--- a/mov_rec/app/assets/stylesheets/scaffolds.scss
+++ b/mov_rec/app/assets/stylesheets/scaffolds.scss
@@ -17,6 +17,8 @@ p, ol, ul, td {
   padding: 5px;
 }
 
+
+
 th {
   padding: 5px;
   text-align: center;
@@ -24,6 +26,8 @@ th {
 
 #td1 {
   text-align: justify;
+  width: 400px;
+  padding: 5px;
 }
 
  h1 {
