--- a/mov_rec/app/views/actors/index.html.erb
+++ b/mov_rec/app/views/actors/index.html.erb
@@ -7,6 +7,7 @@
 <table>
   <thead>
     <tr>
+      <th></th>
       <th>First name</th>
       <th>Last name</th>
       <th>Date of birth</th>
@@ -19,6 +20,7 @@
   <tbody>
     <% @actors.each do |actor| %>
       <tr>
+        <td><img src="<%= actor.picture %>" style="width: 75px"></td>
         <td><%= actor.first_name %></td>
         <td><%= actor.last_name %></td>
         <td><%= actor.date_of_birth %></td>
