--- a/mov_rec/app/views/directors/index.html.erb
+++ b/mov_rec/app/views/directors/index.html.erb
@@ -7,6 +7,7 @@
 <table>
   <thead>
     <tr>
+      <th></th>
       <th>First name</th>
       <th>Last name</th>
       <th>Place of birth</th>
@@ -17,6 +18,7 @@
   <tbody>
     <% @directors.each do |director| %>
       <tr>
+        <td><img src="<%= director.picture %>" style="width: 75px"></td>
         <td><%= director.first_name %></td>
         <td><%= director.last_name %></td>
         <td><%= director.place_of_birth %></td>
