--- a/mov_rec/app/views/studios/show.html.erb
+++ b/mov_rec/app/views/studios/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<img src="<%= @studio.picture %>" style="width: 300px; float: left; padding: 5px">
+
 <p>
   <strong>Studio name:</strong>
   <%= @studio.studio_name %>
