--- a/mov_rec/app/views/directors/show.html.erb
+++ b/mov_rec/app/views/directors/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<img src="<%= @director.picture %>" style="width: 200px; float: left; padding: 5px">
+
 <p>
   <strong>First name:</strong>
   <%= @director.first_name %>
