--- a/mov_rec/app/views/studios/index.html.erb
+++ b/mov_rec/app/views/studios/index.html.erb
@@ -7,6 +7,7 @@
 <table>
   <thead>
     <tr>
+      <th></th>
       <th>Studio name</th>
       <th>Country</th>
       <th colspan="3"></th>
@@ -16,6 +17,7 @@
   <tbody>
     <% @studios.each do |studio| %>
       <tr>
+        <td><img src="<%= studio.picture %>" style="width: 75px"></td>
         <td><%= studio.studio_name %></td>
         <td><%= studio.country %></td>
         <td><%= link_to 'Show', studio %></td>
