Converting from user_id to profile_id
More fixes

--- a/mov_rec/app/views/topics/show.html.erb
+++ b/mov_rec/app/views/topics/show.html.erb
@@ -1,9 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Genre:</strong>
-  <%= @topic.genre_name %>
-</p>
+<h2><%= @topic.genre_name %></h2>
 
 <% if current_user.user_type_id == UserType.find_by(type_name: 'Admin').id  %>
   <%= link_to 'Edit', edit_topic_path(@topic) %> |
