--- a/mov_rec/app/views/movies/show.html.erb
+++ b/mov_rec/app/views/movies/show.html.erb
@@ -4,6 +4,12 @@
 
 <h2><%= @movie.movie_name %></h2>
 
+<% if current_user.user_type_id == UserType.find_by(type_name: 'Admin').id  %>
+  <%= link_to 'Edit', edit_movie_path(@movie) %> | 
+<% end %>
+
+<%= link_to 'Back', movies_path %>
+
 <p>
   <strong>Description:</strong>
   <%= @movie.description %>
@@ -16,7 +22,11 @@
 
 <p>
   <strong>Duration:</strong>
-  <%= @movie.duration %>
+  <% if @movie.duration.hour == 0 %>
+    <%= @movie.duration.strftime('%Mm') %>
+  <% else %>
+    <%= @movie.duration.strftime('%kh %Mm') %>
+  <% end %>
 </p>
 
 <p>
@@ -44,11 +54,16 @@
   <%= @movie.age_rating %>
 </p>
 
-<% @genres = Topic.joins(:movie_topics).where(movie_topics: { movie_id: @movie.id }) %>
+<p>
+  <strong>Genres:</strong>
 
-<% @genres.each do |genre| %>
-  <%= genre.genre_name %>
-<% end %>
+  <% @genres = Topic.joins(:movie_topics).where(movie_topics: { movie_id: @movie.id }) %>
+
+  <% @genres.each do |genre| %>
+    <%= genre.genre_name %>
+  <% end %>
+
+</p>
 
 <br>
 <br>
@@ -88,9 +103,3 @@
     <% end %>
   </tbody>
 </table>
-
-<% if current_user.user_type_id == UserType.find_by(type_name: 'Admin').id  %>
-  <%= link_to 'Edit', edit_movie_path(@movie) %> | 
-<% end %>
-
-<%= link_to 'Back', movies_path %>
