added condition for profiles without a picture
gets rid of tiny empty box that showed up in profiles without a picture

--- a/mov_rec/app/views/profiles/show.html.erb
+++ b/mov_rec/app/views/profiles/show.html.erb
@@ -1,7 +1,9 @@
 <p id="notice"><%= notice %></p>
 
  <p>
+    <% unless @profile.picture.blank? %>
     <img src="<%= @profile.picture %>" style="width: 200px; float: center">
+    <% end %>
  </p>
  <br>
 
