added condition for movies without a poster

--- a/mov_rec/app/views/movies/index.html.erb
+++ b/mov_rec/app/views/movies/index.html.erb
@@ -24,7 +24,11 @@
   <tbody>
     <% @movies.each do |movie| %>
       <tr>
-        <td><img src="<%= movie.poster %>" style="width: 75px"></td>
+        <% if movie.poster.blank? %>
+          <td><img src="<%= movie.poster %>" style="width: 75px; visibility: hidden"></td>
+        <% else %>
+          <td><img src="<%= movie.poster %>" style="width: 75px"></td>
+        <% end %>
         <td style="width: 200px"><%= movie.movie_name %></td>
         <td id="td1"><%= movie.description %></td>
         <td><%= movie.date_released %></td>
